# FocusView

./: .gitignore  Makefile  QWEN.md  README.md  entitlements.plist  main.py  main.spec  pyproject.toml  requirements.txt
assets/: icon.icns
docs/: accessibility-api-guide.md
